# monetary-economy

./: README.md  pyproject.toml
agent_based_economy/: accounting.py  animate.py  markets.py  model.py  utils.py
agent_based_economy/_old/: ledger.py  loan_register.py  portfolio.py  tax_register.py
agent_based_economy/agents/: agent.py  banks.py  firm.py  government.py  household.py  individual.py  roles.py  stock_registrar.py
agent_based_economy/ledgers/: __init__.py
scripts/: balance_sheet_support.py  baseline_economy.py  cash_management.py  simple_commercial_bank_lending.py  simple_government_spending.py  simple_interbank_market.py  simple_private_lending.py
tests/: test_agent.py  test_bond_ledger.py  test_commercial_bank.py  test_commercial_bank_integration.py  test_deposit_ledger.py  test_ledger.py  test_lending_and_borrowing_integration.py  test_loan_ledger.py  test_model.py
